ajuste para permitir acesso a url de produção